--- a/style.css
+++ b/style.css
@@ -276,7 +276,12 @@ nav{
     height: 200px;
 }
 
-
+.detalhes{
+    width: 95%;
+    margin: 0;
+    text-align: justify;
+    height: 100px;
+}
 /* --------Projetos que desenvolvi-------- */
 
 .carousel-container {
@@ -284,7 +289,7 @@ nav{
     width: 90%;
     margin: 0 auto;
     overflow: hidden;
-    height: 900px;
+    height: 80vh;
     gap: 50px;
     box-shadow: 4px 4px 10px rgba(21, 6, 88, 0.5);
     border-radius: 20px;
@@ -315,6 +320,14 @@ nav{
     flex: 0 0 100%;
     text-align: center;
     display: none;
+}
+
+.project-banner{
+    width: 50vw;
+    max-width: 1100px;
+    height: auto;
+    max-height: 500px;
+    border: solid black 2px;
 }
 
 .carousel-button {
@@ -348,11 +361,13 @@ nav{
 .carousel-title{
     font-size: x-large;
     margin-left: 20px;
+
 }
 
 .carousel-description{
     margin-left: 20px;
     font-size: large;
+    margin-bottom: 50px;
 }
 
 .visit-site{
@@ -407,7 +422,8 @@ footer{
     justify-content: center;
     color: white;
     height: auto;
-    margin-top: 50px;
+    min-height: 800px;
+    margin-top: 100px;
     width: 100%;
     margin-bottom: 0;
 
@@ -428,6 +444,7 @@ footer{
     align-items: center;
     margin: 0 auto;
     width: 100%;
+    height: 800px;
 }
 
 .containerIcones{
@@ -452,6 +469,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: large;
 
 }
 
@@ -488,3 +506,265 @@ footer{
     font-size: large;
 }
 
+
+/* Responsividade */
+
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+    nav {
+        width: 100%;
+    }
+
+    .stack{
+        margin: 0;
+    }
+    .project-banner{
+        width: 80%;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 999px) {
+    nav {
+        width: 100%;
+    }
+
+    .stack{
+        margin: 0;
+        width: 90%;
+        height: 80%;
+    }
+
+    .carousel-container{
+        width: 80%;
+    }
+
+    .project-banner{
+        width: 80%;
+        height: 100%;
+    }
+    .carousel-item{
+        height: 50%;
+    }
+
+    .oqfaz{
+        width: 100%;
+        flex-wrap: wrap;
+        height: auto;
+    }
+
+    .oqfazp{
+        flex-wrap: wrap;
+        height: auto;
+        width: 80%;
+    }
+
+    .ContainerServicos{
+        flex-wrap: wrap;
+        height: auto;
+    }
+
+    .fundo{
+        min-height: 500px;
+    }
+
+    .containerIcones {
+        display: flex;
+        flex-direction: column;
+
+    }
+    .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        gap: 20px;
+    }
+
+    .textoCon{
+        width: 300px;
+        text-align: left;
+        display: flex;
+        justify-content: left;
+        align-items: center
+    }
+
+}
+
+
+
+@media (min-width: 100px) and (max-width: 800px) {
+    nav{
+        width: 100%;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .nome{
+        width: 100%;
+        margin: 0;
+        text-align: center;
+        justify-content: center;
+        margin: 0;
+        font-size: xx-large
+    }
+
+    .tags{
+        font-size: large;
+        width: 100%;
+        margin: 0;
+        margin-bottom: 50px;
+    }
+
+    .divicon{
+        font-size: large;
+        width: 100%;
+        margin: 0;
+        justify-content: center;
+    }
+
+    .containerimg{
+        display: none
+    }
+
+    .texto{
+        width: 100%;
+        margin: 0;
+        margin: 5px;
+    }
+
+    .botao{
+        width: 100%;
+        margin: 0;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+
+    .conversation{
+        width: 45%;
+        min-width: 100px;
+    }
+
+    .baixarcv{
+        width: 45%;
+        min-width: 100px;
+    }
+    .containerIcones {
+        display: flex;
+        flex-direction: column;
+
+    }
+    .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        gap: 20px;
+    }
+
+    .textoCon{
+        width: 300px;
+        text-align: left;
+        display: flex;
+        justify-content: left;
+        align-items: center
+    }
+
+
+
+    .stack{
+        flex-wrap: wrap;
+        height: auto;
+        justify-content: center;
+        flex-direction: row;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+
+    }
+
+    .tech{
+        width: 100%;
+        height: 100px;
+        gap: 0;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .containerIcones{
+        margin-left: 20px;
+    }
+
+    .direitos{
+        width: 80%;
+        margin: 0 auto;
+        flex-wrap: wrap;
+        text-align: center;
+        margin-bottom: 40px;     
+    }
+
+    .ContainerServicos{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .fundo{
+        min-height: 400px;
+    }
+
+    .textoCarrossel{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        font-size: large;
+        margin-bottom: 50px;
+    }
+
+    .carousel-container{
+        width: 100%;
+        height: 700px;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project-technologies{
+        flex-wrap: wrap;
+        height: auto;
+        min-height: 100px;
+    }
+    .carousel-button.prev{
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        top: 45%;
+    }
+
+    .carousel-button.next{
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        top: 45%;
+    }
+
+    .project-banner{
+        width: 70%;
+    }
+
+    .oqfaz{
+        width: 100%;
+    }
+
+    .oqfazp{
+        flex-wrap: wrap;
+        height: auto;
+        width: 90%;
+    }
+
+    .contatoscont{
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+    }
+}
