--- a/style.css
+++ b/style.css
@@ -289,10 +289,11 @@ nav{
     width: 90%;
     margin: 0 auto;
     overflow: hidden;
-    height: 80vh;
+    height: 90vh;
     gap: 50px;
     box-shadow: 4px 4px 10px rgba(21, 6, 88, 0.5);
     border-radius: 20px;
+    min-height: 920px;
 
 
 }
@@ -534,8 +535,11 @@ footer{
         height: 80%;
     }
 
+
     .carousel-container{
         width: 80%;
+        min-height: none;
+        max-height: 800px;
     }
 
     .project-banner{
@@ -725,6 +729,7 @@ footer{
         padding: 0;
         justify-content: center;
         align-items: center;
+        min-height: none;
     }
 
     .project-technologies{
