--- a/style.css
+++ b/style.css
@@ -741,14 +741,14 @@ footer{
         align-items: center;
         justify-content: center;
         display: flex;
-        top: 45%;
+        top: 38%
     }
 
     .carousel-button.next{
         align-items: center;
         justify-content: center;
         display: flex;
-        top: 45%;
+        top: 38%
     }
 
     .project-banner{
